--- a/views/indexAuth.jade
+++ b/views/indexAuth.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
     head
         title= pageTitle
+        script(src="//cdn.jsdelivr.net/react/0.14.0-beta3/react-with-addons.min.js")
     body
-        h1 Artail
-        div You are logged in!
+        div#app
+        script(src="/app.js")
