--- a/views/indexAuth.jade
+++ b/views/indexAuth.jade
@@ -4,5 +4,7 @@ html(lang="en")
         title= pageTitle
         script(src="//cdn.jsdelivr.net/react/0.14.0-beta3/react-with-addons.min.js")
     body
+        input#user-id(type="hidden", value=userId)
+        input#debug(type="hidden", value="false")
         div#app
         script(src="/app.js")
