user store, actions based on Alt

--- a/views/indexAuth.jade
+++ b/views/indexAuth.jade
@@ -3,6 +3,7 @@ html(lang="en")
     head
         title= pageTitle
         script(src="//cdn.jsdelivr.net/react/0.14.0-beta3/react-with-addons.min.js")
+        link(rel="stylesheet", href="styles.css")
     body
         input#user-id(type="hidden", value=userId)
         input#debug(type="hidden", value="false")
