--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,18 @@
+html, #app, .application{
+    height: 100%;
+}
+
 body{
     background: #E9EAED;
+    height: 100%;
+    margin: 0;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+.container{
+    max-width: 1140px;
+    margin: 0 auto;
 }
 
 header{
@@ -16,4 +29,51 @@ header .user-name{
     float: right;
     font-size: 13pt;
     margin: 5px 3px;
+}
+
+.heroes{
+    width: 400px;
+    display: inline-block;
+    padding: 5px;
+    margin-top: 5px;
+    background-color: #DFE0E4;
+    border: lightgrey 1px solid;
+    border-radius: 2px;
+    height: calc(100% - 45px);
+    box-sizing: border-box;
+    overflow-y: auto;
+}
+
+.hero{
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    margin-top: 5px;
+    position: relative;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border: lightgrey 1px solid;
+    box-sizing: border-box;
+}
+
+.hero:first-child{
+    margin-top: 0px;
+}
+
+.hero-portrait{
+    width: 55px;
+    height: 55px;
+    display: inline-block;
+    background-color: #E9EAED;
+    border-radius: 50%;
+    box-shadow: 1px 1px 1px gray;
+    position: absolute;
+    left: -5px;
+    top: -3px;
+    border-left: lightgrey 1px solid;
+    border-top: lightgrey 1px solid;
+    box-sizing: border-box;
+    background: url(http://lorempixel.com/54/54);
 }
