--- a/views/indexAuth.jade
+++ b/views/indexAuth.jade
@@ -4,6 +4,7 @@ html(lang="en")
         title= pageTitle
         script(src="//cdn.jsdelivr.net/react/0.14.0-beta3/react-with-addons.min.js")
         link(rel="stylesheet", href="styles.css")
+        link(href="http://fonts.googleapis.com/css?family=Amatic+SC:400,700", rel="stylesheet", type="text/css")
     body
         input#user-id(type="hidden", value=userId)
         input#debug(type="hidden", value="false")
