--- a/public/styles.css
+++ b/public/styles.css
@@ -47,7 +47,20 @@ header .user-name{
     border: lightgrey 1px solid;
     border-radius: 2px;
     box-sizing: border-box;
-    overflow-y: auto;
+    position: absolute;
+    top: 3px;
+}
+
+.heroes:after{
+    display: inline-block;
+    content: " ";
+    position: absolute;
+    background-color: #DFE0E4;
+    width: 1px;
+    height: 39px;
+    right: -1px;
+    top: 0;
+    z-index: 1000;
 }
 
 .hero{
