--- a/public/styles.css
+++ b/public/styles.css
@@ -17,96 +17,84 @@ body{
 }
 
 .container{
-    max-width: 1140px;
     margin: 0 auto;
-}
-
-header{
-    height: 40px;
-    width: 100%;
-    background: #DFE0E4;
-    padding: 5px;
-    box-sizing: border-box;
-    border: 1px solid lightgray;
-    border-radius: 2px;
-}
-
-header .user-name{
-    float: right;
-    font-family: 'Amatic SC', cursive;
-    font-size: 20pt;
-    font-weight: bold;
-}
-
-.heroes{
-    width: 400px;
-    display: inline-block;
-    padding: 5px;
-    margin-top: 5px;
-    background-color: #DFE0E4;
-    border: lightgrey 1px solid;
-    border-radius: 2px;
-    box-sizing: border-box;
-    position: absolute;
-    top: 3px;
-}
-
-.heroes:after{
-    display: inline-block;
-    content: " ";
-    position: absolute;
-    background-color: #DFE0E4;
-    width: 1px;
-    height: 39px;
-    right: -1px;
-    top: 0;
-    z-index: 1000;
-}
-
-.hero{
-    width: 100%;
-    height: 50px;
-    background-color: white;
-    margin-top: 5px;
+    background-color: black;
     position: relative;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px;
-    border: lightgrey 1px solid;
-    box-sizing: border-box;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
-.hero:first-child{
-    margin-top: 0px;
-}
-
-.hero-portrait{
-    width: 55px;
-    height: 55px;
+.actor{
+    position: absolute;
     display: inline-block;
-    background-color: #E9EAED;
+    border: 1px solid transparent;
+    z-index: 10;
+}
+
+.actor:hover{
+    border: 1px solid rgba(255,255,255,0.2);
+}
+
+.actor__visual-left{
+    position: absolute;
+    content: " ";
+    top: 0;
+    left: 0;
+    display: inline-block;
+    width: 37%;
+    height: 100%;
+    background: red;
+    transform: rotateX(75deg);
+}
+
+.actor__visual-right{
+    position: absolute;
+    content: " ";
+    top: 0;
+    left: 63%;
+    display: inline-block;
+    width: 37%;
+    height: 100%;
+    background: red;
+    transform: rotateX(75deg);
+}
+
+.actor__visual-top{
+    position: absolute;
+    content: " ";
+    top: 0;
+    left: 0;
+    display: inline-block;
+    width: 100%;
+    height: 37%;
+    background: red;
+    transform: rotateY(75deg);
+}
+
+.actor__visual-bottom{
+    position: absolute;
+    content: " ";
+    top: 63%;
+    left: 0;
+    display: inline-block;
+    width: 100%;
+    height: 37%;
+    background: red;
+    transform: rotateY(75deg);
+}
+
+.ui-circle{
+    position: absolute;
+    display: inline-block;
     border-radius: 50%;
-    box-shadow: 1px 1px 1px gray;
-    position: absolute;
-    left: -5px;
-    top: -3px;
-    border-left: lightgrey 1px solid;
-    border-top: lightgrey 1px solid;
-    box-sizing: border-box;
-    background: url(http://lorempixel.com/54/54);
+    background-color: rgba(255,255,255,0.1);
+    border: 1px solid rgba(255,255,255,0.15);
+    pointer-events: none;
+    box-shadow: 1px 1px 100px 1px black;
 }
 
-.hero-display-name{
-    position: absolute;
-    top: -4px;
-    left: 60px;
-    font-size: 20pt;
-}
-
-.hero-ilvl{
-    position: absolute;
-    top: 23px;
-    left: 60px;
-    font-size: 16pt;
+.ui-circle__label{
+    position: relative;
+    color: rgba(255,255,255,0.4);
 }
